# p123-strat-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy.env.example  deploy.sh  docker-compose.yml
.claude/: launch.json
backend/: .env.example  .gitignore  generate_autocomplete.py  main.py  p123_autocomplete.json  pyproject.toml  storage.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ManageRankingSystemsModal.tsx  ManageStrategiesModal.tsx  ManageUniversesModal.tsx  RunHistoryModal.tsx  SavedStrategies.tsx  SettingsModal.tsx  Spinner.tsx
frontend/src/components/Results/: AnnualReturnsChart.tsx  DrawdownChart.tsx  EquityChart.tsx  MetricsGrid.tsx  MonteCarloPanel.tsx  PerturbationsPanel.tsx  RobustnessPanel.tsx  RollingChart.tsx  TradesPanel.tsx  chartTheme.ts  index.tsx
frontend/src/components/StrategyForm/: DateRangePicker.tsx  FormulaInput.tsx  index.tsx
frontend/src/types/: index.ts
frontend/src/utils/: p123Autocomplete.ts  perturb.ts
