[project]
name = "p123-strategy-lab"
version = "0.1.0"
description = "P123 Strategy Lab — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-cloud-storage>=2.14.0",
]

[tool.uv]
dev-dependencies = []
